--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -65,6 +65,17 @@
         <url-pattern>*.css</url-pattern>
     </servlet-mapping>
 
+
+    <!--<error-page>-->
+        <!--<error-code>500</error-code>-->
+        <!--<location>/WEB-INF/views/error/500.html</location>-->
+    <!--</error-page>-->
+
+    <!--<error-page>-->
+        <!--<error-code>404</error-code>-->
+        <!--<location>/WEB-INF/views/error/404.html</location>-->
+    <!--</error-page>-->
+
     <!--<welcome-file-list>-->
         <!--<welcome-file>login.jsp</welcome-file>-->
     <!--</welcome-file-list>-->
