--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -68,13 +68,47 @@
 
     <!--<error-page>-->
         <!--<error-code>500</error-code>-->
-        <!--<location>/WEB-INF/views/error/500.html</location>-->
+        <!--<location>/WEB-INF/views/error.jsp</location>-->
     <!--</error-page>-->
 
     <!--<error-page>-->
         <!--<error-code>404</error-code>-->
-        <!--<location>/WEB-INF/views/error/404.html</location>-->
+        <!--<location>/WEB-INF/views/error.jsp</location>-->
     <!--</error-page>-->
+
+    <!--<error-page>-->
+        <!--<error-code>400</error-code>-->
+        <!--<location>/errors/400.html</location>-->
+    <!--</error-page>-->
+    <!--<error-page>-->
+        <!--<error-code>404</error-code>-->
+        <!--<location>/errors/404.html</location>-->
+    <!--</error-page>-->
+    <!--<error-page>-->
+        <!--<error-code>405</error-code>-->
+        <!--<location>/errors/405.html</location>-->
+    <!--</error-page>-->
+    <!--<error-page>-->
+        <!--<error-code>406</error-code>-->
+        <!--<location>/errors/406.html</location>-->
+    <!--</error-page>-->
+    <!--<error-page>-->
+        <!--<error-code>408</error-code>-->
+        <!--<location>/errors/408.html</location>-->
+    <!--</error-page>-->
+    <!--<error-page>-->
+        <!--<error-code>415</error-code>-->
+        <!--<location>/errors/415.html</location>-->
+    <!--</error-page>-->
+    <!--<error-page>-->
+        <!--<error-code>500</error-code>-->
+        <!--<location>/errors/500.html</location>-->
+    <!--</error-page>-->
+    <!--<error-page>-->
+        <!--<error-code>503</error-code>-->
+        <!--<location>/errors/503.html</location>-->
+    <!--</error-page>-->
+
 
     <!--<welcome-file-list>-->
         <!--<welcome-file>login.jsp</welcome-file>-->
