--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,16 +3,16 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
     <!--<filter>-->
-        <!--<filter-name>encodingFilter</filter-name>-->
-        <!--<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>-->
-        <!--<init-param>-->
-            <!--<param-name>encoding</param-name>-->
-            <!--<param-value>UTF-8</param-value>-->
-        <!--</init-param>-->
-        <!--<init-param>-->
-            <!--<param-name>forceEncoding</param-name>-->
-            <!--<param-value>true</param-value>-->
-        <!--</init-param>-->
+    <!--<filter-name>encodingFilter</filter-name>-->
+    <!--<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>-->
+    <!--<init-param>-->
+    <!--<param-name>encoding</param-name>-->
+    <!--<param-value>UTF-8</param-value>-->
+    <!--</init-param>-->
+    <!--<init-param>-->
+    <!--<param-name>forceEncoding</param-name>-->
+    <!--<param-value>true</param-value>-->
+    <!--</init-param>-->
     <!--</filter>-->
     <!-- -->
     <context-param>
@@ -65,58 +65,14 @@
         <url-pattern>*.css</url-pattern>
     </servlet-mapping>
 
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/views/error/404.jsp</location>
+    </error-page>
 
-    <!--<error-page>-->
-        <!--<error-code>500</error-code>-->
-        <!--<location>/WEB-INF/views/error.jsp</location>-->
-    <!--</error-page>-->
-
-    <!--<error-page>-->
-        <!--<error-code>404</error-code>-->
-        <!--<location>/WEB-INF/views/error.jsp</location>-->
-    <!--</error-page>-->
-
-    <!--<error-page>-->
-        <!--<error-code>400</error-code>-->
-        <!--<location>/errors/400.html</location>-->
-    <!--</error-page>-->
-    <!--<error-page>-->
-        <!--<error-code>404</error-code>-->
-        <!--<location>/errors/404.html</location>-->
-    <!--</error-page>-->
-    <!--<error-page>-->
-        <!--<error-code>405</error-code>-->
-        <!--<location>/errors/405.html</location>-->
-    <!--</error-page>-->
-    <!--<error-page>-->
-        <!--<error-code>406</error-code>-->
-        <!--<location>/errors/406.html</location>-->
-    <!--</error-page>-->
-    <!--<error-page>-->
-        <!--<error-code>408</error-code>-->
-        <!--<location>/errors/408.html</location>-->
-    <!--</error-page>-->
-    <!--<error-page>-->
-        <!--<error-code>415</error-code>-->
-        <!--<location>/errors/415.html</location>-->
-    <!--</error-page>-->
-    <!--<error-page>-->
-        <!--<error-code>500</error-code>-->
-        <!--<location>/errors/500.html</location>-->
-    <!--</error-page>-->
-    <!--<error-page>-->
-        <!--<error-code>503</error-code>-->
-        <!--<location>/errors/503.html</location>-->
-    <!--</error-page>-->
-
-
-    <!--<welcome-file-list>-->
-        <!--<welcome-file>login.jsp</welcome-file>-->
-    <!--</welcome-file-list>-->
-
-    <!--<persistence-context-ref>-->
-        <!--<persistence-context-ref-name>EntityManager</persistence-context-ref-name>-->
-        <!--<persistence-unit-name>BOOKSTORE1</persistence-unit-name>-->
-    <!--</persistence-context-ref>-->
+    <error-page>
+        <error-code>500</error-code>
+        <location>/WEB-INF/views/error/500.jsp</location>
+    </error-page>
 
 </web-app>
